--- a/web/src/global.css
+++ b/web/src/global.css
@@ -1,8 +1,5 @@
-h2 {
-	color: var(--new-innov-blue, royalblue);
-	font-size: 2em;
-	margin-bottom: 0.5em;
-	font-weight: normal;
+:root {
+	--bar-color: var(--mcw-anesth-light-green, royalblue);
 }
 
 summary {
@@ -33,8 +30,8 @@ label > select {
 	display: block;
 }
 
-label > input[type="checkbox"],
-label > input[type="radio"] {
+label > input[type='checkbox'],
+label > input[type='radio'] {
 	display: inline-block;
 	vertical-align: middle;
 }
@@ -57,4 +54,35 @@ label > input[type="radio"] {
 
 .results-controls {
 	margin-bottom: 1em;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+th,
+td {
+	padding: 0.25em 0.5em;
+	border: 1px dotted #ccc;
+}
+
+th {
+	text-align: left;
+	font-weight: normal;
+}
+
+thead th {
+	font-weight: bold;
+}
+
+th.numeric,
+td.numeric {
+	text-align: right;
+}
+
+a.disabled {
+	color: #888;
+	pointer-events: none;
+	cursor: not-allowed;
+	opacity: 0.75em;
 }
