--- a/web/src/global.css
+++ b/web/src/global.css
@@ -9,6 +9,27 @@ body {
 	padding: 0;
 }
 
+body {
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	min-height: 100vh;
+}
+
+body > #app {
+	flex-grow: 1;
+}
+
+footer {
+	color: #555;
+	display: flex;
+	justify-content: space-between;
+}
+
+footer > * {
+	margin: 1em;
+}
+
 summary {
 	cursor: pointer;
 	list-style-position: outside;
